[package]
name = "kryphocron"
version = "0.1.0-phase1"
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
description = "Primitives crate for the kryphocron substrate: capability proofs, tier-aware envelopes, authorization context, audit pipeline, and inter-service auth vocabulary."
keywords = ["atproto", "authorization", "capability", "audit"]
categories = ["authentication", "cryptography", "data-structures"]
publish = false

# License: MPL-2.0 (file-level copyleft) per §9.8. Per-file
# headers point at the LICENSE file at the crate root.
# Downstream crates (PDS, AppView, etc.) are encouraged to ship
# permissive (MIT OR Apache-2.0); see TRADEMARK.md for marks
# discipline.

[lib]
name = "kryphocron"
path = "src/lib.rs"

[dependencies]
# §9.5 trait-async dependency. Used by the §7 resolver and §8
# encryption-hook trait surfaces. Phase 1 ships only the trait
# shapes; concrete impls fire in Phase 4/5.
async-trait = "0.1"

# §9.5 small-vector optimization. Used in capability sets,
# attribution chains, scope vectors, JWT scope vectors. Phase 1
# uses it for §4.2 AttributionChain entries (replacing the spec's
# ArrayVec reference; bounded depth is runtime-enforced by the
# crate's constructors). See CHAINLINKS #2.
smallvec = "1.13"

# §9.5 structured error derivation. Used across §4 error enums.
thiserror = "2"

# §9.5 / §7.2 Ed25519 signature verification. Phase 4a wires this
# for the JWT verification chain; the v1 algorithm allowlist
# defaults to Ed25519-only per §7.2's conservative-default
# discipline. ECDSA variants (ES256/ES256K) are operator opt-in
# and currently stub with `UnsupportedAlgorithm` — see chainlinks.
ed25519-dalek = "2"

# §7.2 / §9.5 base64url decoding for JWT segment parsing. Pinned
# to 0.22 to align with the version proto-blue's lexicon parsing
# transitively pulls in (one major version across the dep tree).
base64 = "0.22"

# §7.2 / §9.5 JSON parsing for JWT headers and payloads. Phase 4a
# moves this from `optional` to unconditional because the
# verification path needs JSON parsing on every authenticated
# request. The `audit-serde-json` feature retains its `dep:serde`
# activation for the optional `Serialize`/`Deserialize` derives on
# audit events (chainlink #22 tracks the full transitive coverage
# rollout for Phase 6).
serde_json = "1"

# §4.8 / §7.6 / §9.5 deterministic CBOR encoding for the
# capability-claim wire format. Phase 4b uses ciborium's `Value`
# tree as the building block and a project-internal canonicalizer
# (RFC 8949 §4.2.1 length-then-bytewise map-key sort) to produce
# round-trip-stable signatures. Pinned to 0.2 to align with the
# version proto-blue's lexicon parsing transitively pulls in.
ciborium = "0.2"

# §4.4 / §7.5 / §9.5 keyed Blake3 for session-id derivation
# (`SubstrateSessionDerivationKey`-keyed over `nonce || entropy`)
# and session-digest correlation (`CorrelationKey`-keyed over the
# session id, §4.4). Phase 4d wires both call sites; Phase 1
# shipped the type vocabulary with the keyed-hash construction
# stubbed.
blake3 = "1"

# §7.5 / §9.5 OS CSPRNG access for
# `SubstrateSessionDerivationKey::generate` and the responder-side
# `responder_entropy` produced fresh per handshake. Already in the
# transitive dep tree (via ed25519-dalek's rand_core); promoted to
# a direct dep so the surface is explicit and pinned at the major
# version we depend on. Pinned to 0.2 to align with the version
# proto-blue's lexicon parsing transitively pulls in.
getrandom = "0.2"

# Phase 2 (§5 lexicon strategy) deliverable: the companion crate
# ships the v1 lexicons, the codegen-produced Rust types, and the
# build-time three-way-consistency-checked registry. The
# kryphocron crate consumes it for `Tier`, `Visibility`,
# `UnknownNsid`, `SemVer`, `DeprecationState`,
# `LexiconRegistryEntry`, `KRYPHOCRON_LEXICON_REGISTRY`, and the
# validated AT-Protocol identifier types (`Did`, `Nsid`,
# `RecordKey`, `AtUri`, `Cid`, `Datetime`, `Tid`).
#
# The path dependency is the development-tree shape. crates.io
# publication (Phase 6) will replace it with a `version = "~0.1.0"`
# pin matching the lexicon-set semver (§5.5).
kryphocron-lexicons = { path = "../kryphocron-lexicons" }

[dev-dependencies]
# `trybuild` for Phase B's "this should not compile" assertions.
trybuild = "1"
# Phase 4a (§7.2 JWT verification) tests are async because
# `verify_jwt` is async (DID resolution may need network I/O).
# Use the `tokio::test` macro with a single-thread runtime —
# tests don't need the multi-thread scheduler.
tokio = { version = "1", features = ["macros", "rt"] }

[features]
default = []

# §9.4 / §6.10 ships `audit-serde-json` for operators consuming
# JSON audit streams. Phase 1 declares the feature with no impls;
# Phase 3 (§6 audit-event vocabulary) ships the variant set but
# defers the transitive `Serialize` / `Deserialize` derive
# wiring to Phase 6: §6.10's "every reachable type gains the
# derives" goal requires changes across `crate::identity`
# (ServiceIdentity's sealed-token PhantomData; Instant fields in
# `BindOutcomeRepr::Expired`), `kryphocron-lexicons` (SemVer,
# Nsid, Did currently lack derives), and the `proto-blue` family.
# Both `cargo build --features audit-serde-json` and `cargo build`
# succeed in Phase 3 — the feature flag remains structurally
# wired and the `serde` / `serde_json` dependencies are correctly
# optional. See chainlink for full-coverage rollout plan.
audit-serde-json = ["dep:serde"]

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

# `serde_json` was [dependencies.serde_json] optional in Phase 1.
# Phase 4a (§7.2 JWT verification) needs JSON parsing
# unconditionally; moved to the unconditional `[dependencies]`
# block above. The `audit-serde-json` feature still activates
# `serde` for the optional Serialize/Deserialize derives on
# audit-event types.

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
# Project-standard lint level: warn `all` (correctness + suspicious
# + style + complexity + perf), allow pedantic.
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }

# Allow phase-stub patterns explicitly.
todo = "allow"
unimplemented = "allow"

# §4-committed shapes carry large fields (ServiceIdentity holds key
# material + rotation evidence; DenialReason and AuthDenial carry
# the full diagnostic payload per round-5). Boxing them would be a
# wire-format-touching change deferred to Phase 4's perf review;
# Phase 1 keeps the spec-committed shapes verbatim.
large_enum_variant = "allow"
result_large_err = "allow"

# §4.8 CapabilityClaim::new constructor takes 8 args by spec; the
# alternative (a builder) is a Phase 4 ergonomics decision.
too_many_arguments = "allow"

# The crate's #[must_use] discipline mostly lives on types
# (Proof families, Outcome, etc.). Function-level #[must_use] on
# helpers returning already-must_use types is doubled; clippy
# flags it correctly — fixes are inline.
