[package]
name = "kryphocron"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
description = "Privacy-first ATProto substrate primitives: type architecture, audit vocabulary, inter-service auth, and encryption hook surfaces"
keywords = ["atproto", "substrate", "privacy", "bluesky", "federation"]
categories = ["authentication", "cryptography", "data-structures"]
authors = ["skydeval <skydeval@mail.nearhorizon.app>"]
repository = "https://github.com/skydeval/kryphocron"
homepage = "https://github.com/skydeval/kryphocron"
readme = "README.md"

# License: MPL-2.0 (file-level copyleft) per §9.8. Per-file
# headers point at the LICENSE file at the crate root.
# Downstream crates (PDS, AppView, etc.) are encouraged to ship
# permissive (MIT OR Apache-2.0).

[lib]
name = "kryphocron"
path = "src/lib.rs"

[dependencies]
# See docs/internal/DEPENDENCIES.md for pinning discipline rationale.
# Correctness-critical deps are tilde-pinned (patch-updates-only); a silent
# minor bump on any of them could shift a wire-format- or correctness-deciding
# behavior, so version moves must be explicit Cargo.toml edits.
async-trait = "0.1"                 # async trait surfaces (§7 resolver, §8 hooks)
smallvec = "1.13"                   # bounded inline vectors (capabilities, chains, scopes)
thiserror = "2"                     # structured error derivation across §4 enums
ed25519-dalek = "~2.2"              # JWT signature verification per §7.2 (Ed25519 default)
base64 = "~0.22"                    # base64url JWT segment decoding (§7.2)
serde_json = "1"                    # JSON parsing on the §7.2 JWT verification path
ciborium = "~0.2"                   # canonical CBOR for the §4.8 capability-claim wire format
blake3 = "~1.8"                     # keyed hash: session-id derivation + correlation (§4.4/§7.5)
getrandom = "~0.2"                  # OS CSPRNG for session-key generation + handshake entropy (§7.5)
kryphocron-lexicons = "0.3"         # §5 lexicons, codegen types, build-time tier registry
tokio = { version = "1", features = ["time"] }  # §4.6 timing-equalization sleep primitive

# laquna deps (vendored encoder dependencies, rev 3 §3): chacha20, hkdf, sha2,
# ruzstd, zstd, hex. NOTE: zstd binds C libzstd (zstd-sys) — the one non-Rust
# build dependency the default codec brings in.
chacha20 = { version = "0.9", default-features = false }    # anchor-stream keystream
hkdf = { version = "0.12", default-features = false }       # per-stream HKDF-SHA256 keying
sha2 = { version = "0.10", default-features = false }       # HKDF-SHA256 hash
ruzstd = { version = "0.7", default-features = false, features = ["hash"] }  # decode-side zstd
zstd = "0.13"                       # encode-side zstd compressor (C libzstd via zstd-sys)
hex = "0.4"                         # rotation-mark slug parse/format (§3.4/§4.7)

[dev-dependencies]
trybuild = "1"                                          # compile-fail assertions on sealed surfaces
tokio = { version = "1", features = ["macros", "rt"] }  # async test runtime for §7.2 JWT tests
kryphocron-lexicons = "0.3"                             # naming codegen record types in §5.4 tests

[build-dependencies]
# §5.4 post-processing reads KRYPHOCRON_LEXICON_REGISTRY (NSID -> tier) to emit
# the per-record HasNsid impls.
kryphocron-lexicons = "0.3"

[features]
default = []

# Integration-test scaffolding: exposes `AuthContext::new_for_test` /
# `ServiceIdentity::new_for_test` so out-of-crate tests can drive
# issuance → bind → audit without a full verified-evidence path. Off by default.
test-support = []

# Activates Serialize/Deserialize derives on audit events (§9.4 / §6.10). The
# derive wiring is partial; see the CHANGELOG "Known limitations" note and
# docs/internal/DEPENDENCIES.md.
audit-serde-json = ["dep:serde"]

# `serde` is optional (activated by `audit-serde-json`); `serde_json` is an
# unconditional dependency above because the §7.2 JWT path always parses JSON.
[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
# Project-standard lint level: warn `all` (correctness + suspicious
# + style + complexity + perf), allow pedantic.
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }

# Phase-stub patterns are now disallowed: v0.1 ships whole, with
# no remaining `todo!()` / `unimplemented!()` in production code.
# Denying these lints makes a stray placeholder in a future patch
# a hard build failure rather than a silent compile. Test-fixture
# panics with explicit messages (e.g.
# `panic!("test fixture: should be unreachable")`) remain
# permitted — they describe a structural invariant, not a stub.
todo = "deny"
unimplemented = "deny"

# §4-committed shapes carry large fields (ServiceIdentity holds
# key material + rotation evidence; DenialReason and AuthDenial
# carry the full diagnostic payload per round-5). Boxing them
# would be a wire-format-touching change; v0.1 keeps the spec-
# committed shapes verbatim, leaving any perf-driven boxing for
# v0.2+.
large_enum_variant = "allow"
result_large_err = "allow"

# §4.8 CapabilityClaim::new constructor takes 8 args by spec;
# the alternative (a builder) is a v0.2+ ergonomics decision.
too_many_arguments = "allow"

# The crate's #[must_use] discipline mostly lives on types
# (Proof families, Outcome, etc.). Function-level #[must_use] on
# helpers returning already-must_use types is doubled; clippy
# flags it correctly — fixes are inline.
